# robot-collab

./: AGENTS.md  pytest.ini  requirements-phase0-roco.txt  requirements.txt  run_dialog.py
docs/: 00_MASTER_ROADMAP.md  02_PHASE2_DATASET_PIPELINE.md  03_PHASE3_ACT_TRAINING.md  04_PHASE4_DIRECT_INFERENCE.md  05_PHASE5_LEARNED_SKILL_EXECUTOR.md  06_PHASE6_PLANNER_INTEGRATION.md  07_PHASE7_MULTI_AGENT_EXECUTION.md  08_PHASE8_BENCHMARK_RELEASE.md  09_CROSS_PHASE_AGENTS.md  10_CODEX_ORCHESTRATION_PROMPTS.md  11_TRACEABILITY_MATRIX.md  PHASE0_CODEX_IMPLEMENTATION_SPEC.md  PHASE1_CODEX_IMPLEMENTATION_SPEC.md  PHASE2_CODEX_IMPLEMENTATION_SPEC.md  behavior-tree-integration.md  create_roco_task_tutorial.md  phase0_lerobot_roco_bridge.md  phase0_setup_install_test_demos.md  phase1_setup_install_test_demos.md  phase1_skill_architecture.md  phase2_dataset_pipeline.md  phase2_setup_install_test_demos.md  phase3_act_training.md  phase3_short_tutorial.md  system-architecture.md
integrations/lerobot_roco/client/: README.md  pyproject.toml
integrations/lerobot_roco/client/src/lerobot_roco_env/: __init__.py  client.py  config.py  env.py  envhub.py  lerobot_compat.py  validation.py
prompting/: __init__.py  dialog_prompter.py  feedback.py  parser.py  plan_prompter.py  skill_feedback.py  skill_parser.py  skill_prompt.py
rocobench/: README.md  __init__.py  behavior_tree.py  policy.py  subtask_plan.py
scripts/: collect_roco_expert_dataset.py  create_roco_dataset_splits.py  create_roco_hold_action.py  evaluate_roco_act_offline.py  inspect_roco_checkpoint.py  run_act_overfit_test.py  (+9 more)
(+85 files in other folders)
