[project]
name = "lerobot-roco-env"
version = "0.1.0"
description = "Gymnasium client environment for the RoCo Phase 0 bridge"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "gymnasium",
    "pyzmq",
    "msgpack",
]

[project.optional-dependencies]
lerobot = [
    "lerobot>=0.5.1,<0.6",
]
test = [
    "pytest",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
